--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,6 @@
 - id: header-guard
   name: Header guard
   description: Add C/C++ header guard
-  entry: hooks/header-guard.py
+  entry: header-guard
   language: python
   files: \.(h|hh|H|hp|hxx|hpp|HPP|h\+\+|tcc)$
