--- a/setup.cfg
+++ b/setup.cfg
@@ -4,15 +4,18 @@ version = 0.1.0
 description = Pre-commit hooks for C/C++
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pre-commit/pre-commit-hooks
+url = https://github.com/igankevich/pre-commit-hooks
 author = Ivan Gankevich
 author_email = i.gankevich@spbu.ru
 license = Unlicense
 license_file = LICENSE
 
+[options]
+packages = find:
+
 [options.entry_points]
 console_scripts =
-    header-guard = hooks.header-guard:main
+    header-guard = pre_commit_hooks_cpp.header_guard:main
 
 [bdist_wheel]
 universal = True
