--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pre-commit-hooks-cpp
-version = 0.1.0
+version = 0.2.0
 description = Pre-commit hooks for C/C++
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -12,9 +12,12 @@ license_file = LICENSE
 
 [options]
 packages = find:
+install_requires =
+    chardet
 
 [options.entry_points]
 console_scripts =
+    normalise = pre_commit_hooks_cpp.normalise:main
     header-guard = pre_commit_hooks_cpp.header_guard:main
 
 [bdist_wheel]
