--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pre-commit-hooks-cpp
-version = 0.2.2
+version = 0.3.0
 description = Pre-commit hooks for C/C++
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -19,6 +19,7 @@ install_requires =
 console_scripts =
     normalise = pre_commit_hooks_cpp.normalise:main
     header-guard = pre_commit_hooks_cpp.header_guard:main
+    normalise-opencl = pre_commit_hooks_cpp.normalise_opencl:main
 
 [bdist_wheel]
 universal = True
