Legal hook for copyright and license notices.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = pre-commit-hooks-cpp
-version = 0.5.1
+version = 0.6.0
 description = Pre-commit hooks for C/C++
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/igankevich/pre-commit-hooks
+url = https://github.com/igankevich/pre-commit-cpp
 author = Ivan Gankevich
 author_email = i.gankevich@spbu.ru
 license = Unlicense
@@ -21,6 +21,7 @@ console_scripts =
     header-guard = pre_commit_hooks_cpp.header_guard:main
     normalise-cpp = pre_commit_hooks_cpp.normalise_cpp:main
     normalise-opencl = pre_commit_hooks_cpp.normalise_opencl:main
+    legal = pre_commit_hooks_cpp.legal:main
 
 [bdist_wheel]
 universal = True
